--- a/package.json
+++ b/package.json
@@ -20,12 +20,8 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
     "@types/express": "^5.0.3",
-    "eslint": "^9.29.0",
-    "globals": "^16.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1"
+    "typescript": "^5.8.3"
   }
 }
